--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,8 @@
 @import "normalize.scss"; /* base▼
 ========================================================================== */
 
-body {
+html {
+	font-size: 62.5%;
 	box-sizing: border-box;
 }
 
@@ -14,55 +15,98 @@ ul {
 ========================================================================== */
 /* ヘッダー▼
 ========================================================================== */
+
 .top-header {
 	max-width: 1200px;
 	margin: auto;
-	font-size: 12px;
+	font-size: 1.2rem;
+
 	.lang-nav {
 		margin: 20px auto;
 		display: flex;
 		justify-content: flex-end;
+
 		li {
-			padding:0 1.5em;
+			padding: 0 1.5em;
+
 			a {
 				text-decoration: none;
 				color: #666;
 			}
-			a:hover{
-				border-bottom: 1px solid #666;
+
+			a:hover {
+				text-decoration: underline;
 			}
 		}
-		li:first-child{
+
+		li:first-child {
 			border-right: 1px solid #ccc;
 		}
 	}
-	.header-img{
-		text-align: center;
-		background: url("./image/img_logo_pc.png") no-repeat;
+
+	.header-img {
+		margin: auto;
+		width: 186px;
+		height: 60px;
+
+		.sm-img {
+			display: none;
+		}
 	}
-	.global-nav{
-		ul{
+
+	.global-nav {
+		ul {
 			display: flex;
 			justify-content: space-around;
 			font-weight: bold;
-			font-size: 14px;
+			font-size: 1.4rem;
 			margin: 30px auto;
 		}
 	}
-	.slider{
-		img{
+
+	.slider {
+		img {
 			display: none;
 		}
-		.open{
+
+		.open {
 			display: block;
 		}
 	}
 }
-
 /* ヘッダー▲
 ========================================================================== */
 /* メイン▼
 ========================================================================== */
+
+.news {
+	width: 1200px;
+	margin: auto;
+	font-size: 1.4rem;
+	.news-nav {
+		display: flex;
+		justify-content: space-around;
+
+		li {
+			border-top: 1px solid #ccc;
+			border-bottom: 1px solid #ccc;
+			border-right: 1px solid #ccc;
+
+			a {
+				text-decoration: none;
+				text-align: center;
+				color: #333;
+				display: block;
+				width: 192px;
+				padding: 24px;
+			}
+		}
+		li:last-child{
+			border-right: none;
+
+		}
+	}
+}
 /* メイン▲
 ========================================================================== */
 /* フッター▼
